fixed font size of experience on mobile

--- a/css/experience.css
+++ b/css/experience.css
@@ -38,7 +38,7 @@ html {
   }
 
   p {
-      margin: 0;
+    margin: 0;
   }
   
   .pink {
@@ -344,6 +344,9 @@ html {
     flex-direction: column;
     justify-content: center;
     background-color: #010420;
+  }
+  .experience p {
+    font-size: 9px;
   }
 }
   
